cluster/production/assets.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: assets
  template:
    metadata:
      labels:
        tier: assets
    spec:
      containers:
        - name: assets
          image: asia.gcr.io/static-mediator-245800/kube-demo-assets:latest
          ports:
            - name: www
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health_check
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health_check
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: assets
spec:
  selector:
    tier: assets
  ports:
    - name: http
      port: 80
      targetPort: www
      protocol: TCP
