cluster/production/glusterfs.yml
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs
spec:
  ports:
    - port: 1

---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs
subsets:
  - addresses:
      - ip: 10.0.1.8
    ports:
      - port: 1
  - addresses:
      - ip: 10.0.1.9
    ports:
      - port: 1
