cluster/production/mysql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: mysql
  template:
    metadata:
      labels:
        tier: mysql
    spec:
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
      containers:
        - name: mysql
          image: mysql:5.7.28
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          # https://github.com/helm/charts/blob/master/stable/mysql/templates/deployment.yaml#L118
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          # https://github.com/helm/charts/blob/master/stable/mysql/templates/deployment.yaml#L134
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    tier: mysql
  ports:
    - name: mysql
      targetPort: mysql
      port: 3306
      protocol: TCP
