cluster/production/redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: redis
  template:
    metadata:
      labels:
        tier: redis
    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
      containers:
        - name: redis
          image: redis:5.0.7-alpine
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: redis-data
              mountPath: /data
          # https://github.com/helm/charts/blob/master/stable/redis/values.yaml#L94
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          # https://github.com/helm/charts/blob/master/stable/redis/values.yaml#L101
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    tier: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
