cluster/production/web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        tier: web
    spec:
      volumes:
        - name: google-storage-key
          secret:
            defaultMode: 600
            secretName: google-storage
            items:
              - key: googleStorageKey
                path: ./key.json
      containers:
        - name: web
          image: asia.gcr.io/static-mediator-245800/kube-demo-web:latest
          command:
            - bundle
            - exec
            - puma
          ports:
            - name: www
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health_check
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health_check
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
            - name: google-storage-key
              mountPath: /app/secrets/google
              readOnly: true

---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: www
      protocol: TCP
