cluster/production/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
    - host: stg.kube.demo
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: http

    - host: stg.assets.kube.demo
      http:
        paths:
          - backend:
              serviceName: assets
              servicePort: http
